Bug 322278 - Call to KIO::NetAccess::synchronousRun can block korganizer
Summary: Call to KIO::NetAccess::synchronousRun can block korganizer
Status: RESOLVED FIXED
Alias: None
Product: kdepimlibs
Classification: Applications
Component: kcalcore (other bugs)
Version First Reported In: GIT (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-12 13:42 UTC by Christian Mollekopf
Modified: 2013-09-25 17:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Mollekopf 2013-07-12 13:42:09 UTC
The call in fbExists in akonadi/calendar/freebusymanager.cpp can block korganizer if a server is configured but not available. I noticed this when the code was still in kdepim/calendarsupport, but I suppose it's still the same.

This check should somehow happen async, it can become rather annoying otherwise.

Reproducible: Always
Comment 1 Sergio Martins 2013-09-23 21:09:42 UTC
agreed, I don't think anyone is maintaining freebusy though
Comment 2 Christian Mollekopf 2013-09-25 17:22:06 UTC
Git commit 0a81740b7afa86e9ec02671a743a4c1681fac75c by Christian Mollekopf.
Committed on 24/09/2013 at 22:19.
Pushed by cmollekopf into branch 'master'.

Async checking of fbobjects to validate url.
REVIEW: 112925

M  +83   -33   akonadi/calendar/freebusymanager.cpp
M  +27   -1    akonadi/calendar/freebusymanager_p.h

http://commits.kde.org/kdepimlibs/0a81740b7afa86e9ec02671a743a4c1681fac75c
Comment 3 Christian Mollekopf 2013-09-25 17:33:01 UTC
Git commit 723f02a07f793905f31b28e4d1ce65abc5b0c88c by Christian Mollekopf.
Committed on 24/09/2013 at 22:19.
Pushed by cmollekopf into branch 'KDE/4.11'.

Async checking of fbobjects to validate url.
REVIEW: 112925
(cherry picked from commit 0a81740b7afa86e9ec02671a743a4c1681fac75c)

M  +83   -33   akonadi/calendar/freebusymanager.cpp
M  +27   -1    akonadi/calendar/freebusymanager_p.h

http://commits.kde.org/kdepimlibs/723f02a07f793905f31b28e4d1ce65abc5b0c88c
Comment 4 Christian Mollekopf 2013-09-25 17:33:22 UTC
Git commit 723f02a07f793905f31b28e4d1ce65abc5b0c88c by Christian Mollekopf.
Committed on 24/09/2013 at 22:19.
Pushed by cmollekopf into branch 'KDE/4.11'.

Async checking of fbobjects to validate url.
REVIEW: 112925
(cherry picked from commit 0a81740b7afa86e9ec02671a743a4c1681fac75c)

M  +83   -33   akonadi/calendar/freebusymanager.cpp
M  +27   -1    akonadi/calendar/freebusymanager_p.h

http://commits.kde.org/kdepimlibs/723f02a07f793905f31b28e4d1ce65abc5b0c88c