Async checking of fbobjects to validate url.

BUG: 322278
REVIEW: 112925